# clip_finder

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  configure
app/: CMakeLists.txt  main.cpp
cmake/: OpenCVIncludes.cmake
data/: convert.py
data/darknet/config/: clip.cfg  clip.data  train.txt
data/darknet/images/: half_light_image-00161.txt  half_light_image-00220.txt  half_light_image-00233.txt  half_light_image-00330.txt  half_light_image-00531.txt  half_light_image-00599.txt  half_light_image-00694.txt  half_light_image-00718.txt  half_light_image-01026.txt  half_light_image-01122.txt  half_light_image-01179.txt  half_light_image-01260.txt  half_light_image-01301.txt  half_light_image-01427.txt  half_light_image-01438.txt  half_light_image-01485.txt  half_light_image-01503.txt  half_light_image-01590.txt  half_light_image-01610.txt  half_light_image-01654.txt  one_light_image-00024.txt  one_light_image-00166.txt  one_light_image-00197.txt  one_light_image-00303.txt  one_light_image-00329.txt  one_light_image-00368.txt  one_light_image-00371.txt  one_light_image-00479.txt  one_light_image-00502.txt  one_light_image-00596.txt  one_light_image-00636.txt  one_light_image-00713.txt  one_light_image-00717.txt  one_light_image-00926.txt  one_light_image-00986.txt  one_light_image-01060.txt  one_light_image-01106.txt  one_light_image-01121.txt  one_light_image-01204.txt  one_light_image-01352.txt  (+63 more)
data/darknet/labels/: half_light_image-00093.txt  half_light_image-00197.txt  half_light_image-00331.txt  half_light_image-00426.txt  half_light_image-00474.txt  half_light_image-00663.txt  half_light_image-00676.txt  half_light_image-01063.txt  half_light_image-01064.txt  half_light_image-01085.txt  half_light_image-01088.txt  half_light_image-01230.txt  half_light_image-01254.txt  half_light_image-01281.txt  half_light_image-01530.txt  one_light_image-00031.txt  one_light_image-00139.txt  one_light_image-00214.txt  one_light_image-00337.txt  one_light_image-00541.txt  one_light_image-00591.txt  one_light_image-00638.txt  one_light_image-00654.txt  one_light_image-00722.txt  one_light_image-00757.txt  one_light_image-00759.txt  one_light_image-00849.txt  one_light_image-00899.txt  one_light_image-00927.txt  one_light_image-00943.txt  one_light_image-01003.txt  one_light_image-01023.txt  one_light_image-01046.txt  one_light_image-01058.txt  one_light_image-01110.txt  one_light_image-01125.txt  one_light_image-01135.txt  one_light_image-01175.txt  one_light_image-01189.txt  one_light_image-01463.txt  (+57 more)
data/darknet/weights/: clip_last.weights
data/tools/: convert.py
data/vott/: WorkoutAnnotation-export.json
include/clip_finder/: camera.hpp  clip.hpp  config.hpp  defaults.hpp  detector.hpp  lobe.hpp
src/: CMakeLists.txt  camera.cpp  config.cpp  detector.cpp  lobe.cpp  main.cpp
